<resources>
    <string name="app_name">playground</string>
    <string name="lorem_pp">Lorem ipsum dolor sit amet, consectetur adipiscing elit.\nMauris sed.</string>
    <string name="lorem_p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.\nSed lobortis erat eget nisl pellentesque, sed.</string>
    <string name="lorem_m">Lorem ipsum dolor sit amet, consectetur adipiscing elit.\nDonec varius magna eu nisi rutrum fermentum.\nInteger pretium, turpis et pharetra.</string>
    <string name="lorem_g">Lorem ipsum dolor sit amet, consectetur adipiscing elit.\nSed sed nisl vestibulum justo consequat suscipit vitae id erat.\nInteger aliquam, arcu laoreet condimentum facilisis, leo.</string>
    <string name="lorem_gg">Lorem ipsum dolor sit amet, consectetur adipiscing elit.\nDonec eget ornare nulla.\nVestibulum nec nibh arcu.\nNulla facilisi.\nDuis turpis nibh, sodales nec dapibus at, ultrices nec libero.\nPellentesque eleifend mi lacus, hendrerit dignissim nisl suscipit ac.\nAliquam id luctus metus.\nVestibulum congue ipsum ac justo cursus, vel varius est venenatis.\nNullam quis diam consectetur lacus pellentesque ultrices a id enim.\nNunc efficitur ex ac sapien dictum semper ac sed mi.\nDonec porttitor sapien quis viverra ullamcorper.\nNunc sodales ultricies malesuada.\nNulla tristique ante quis ex aliquet, nec pulvinar nunc tempor.\nNunc vulputate hendrerit diam, sed efficitur eros accumsan in.\nInterdum et malesuada fames ac ante ipsum primis in faucibus.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Examples</string>
    <string name="menu_parallax_animation">Parallax</string>
    <string name="menu_scrolling_animation">Scrolling</string>
    <string name="menu_overlap_animation">Overlap</string>
    <string name="animations">Animations</string>
    <string name="menu_title">Playground</string>
    <string name="menu_subtitle">Just4Fun</string>
    <string name="menu_skelly_loading_animation">Skeleton Loading</string>
    <string name="menu_bottomsheet">Bottomsheet</string>
    <string name="euro_emoji">0x1F4B6</string>
</resources>
