<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:title="@string/animations">
        <item
            android:id="@+id/nav_parallax"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_parallax_animation" />
        <item
            android:id="@+id/nav_scrolling"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_scrolling_animation" />
        <item
            android:id="@+id/nav_overlap"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_overlap_animation" />
        <item
            android:id="@+id/nav_skelly"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_skelly_loading_animation" />
    </group>

</menu>
